# reservation_demo

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env  Makefile  README.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a4f971cbdb8a_add_availability_schedule_profile_.py  cbd83fdf5260_initial_migration_create_resources_and_.py  fe4497a3afbf_add_user_and_menu_services.py
backend/app/: config.py  database.py
backend/app/api/: dependencies.py
backend/app/api/routers/: __init__.py  admin.py  auth.py  reservations.py  resources.py  salon.py  upload.py
backend/app/core/: __init__.py  security.py
backend/app/domain/entities/: __init__.py  reservation.py  resource.py  user.py
backend/app/repositories/: __init__.py  base.py  reservation_repository.py  resource_repository.py  user_repository.py
backend/app/schemas/: __init__.py  reservation_schema.py  resource_schema.py  user_schema.py
backend/app/usecases/: __init__.py  exceptions.py  reservation_usecase.py  resource_usecase.py  user_usecase.py
backend/scripts/: __init__.py  create_admin.py  create_admin_cli.py
frontend/: .gitignore  README.md  orval.config.ts  package-lock.json  package.json
frontend/src/api/: mutator.ts
